--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,17 @@
 [package]
-name = "rust-template"
+name = "rust_template"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+path= "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "rust_template"
+
+[dev-dependencies]
+reqwest = "0.11"
 
 [dependencies]
 actix-web = "4"
