--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,15 @@ reqwest = "0.11"
 actix-web = "4"
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"] }
+
+[dependencies.sqlx]
+version = "0.6"
+default-features = false
+features = [
+  "runtime-tokio-rustls",
+  "macros",
+  "postgres",
+  "uuid",
+  "chrono",
+  "migrate"
+]
