--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ reqwest = "0.11"
 actix-web = "4"
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"] }
+config = "0.13"
 
 [dependencies.sqlx]
 version = "0.6"
